Added the capability to filter on severity, finding text and remark text

--- a/jmvc/seccubus/finding/filter/views/error.ejs
+++ b/jmvc/seccubus/finding/filter/views/error.ejs
@@ -19,4 +19,9 @@ Plugin:
 <select disabled=true filter='plugin' class='filter pluginFilter'>
 	<option selected disabled=true>-----</option>
 </select>
+
+Finding: <input type='text' disabled=disabled value=''>
+
+Remark: <input type='text' disabled=disabled class='filter remarkFilter' value=''>
+
 <% if( typeof message != "undefined" ) { %><br><%= message %><% } %>
