--- a/jmvc/seccubus/finding/status/views/init.ejs
+++ b/jmvc/seccubus/finding/status/views/init.ejs
@@ -12,7 +12,10 @@
 				host		: fHost,
 				hostName	: fHostName,
 				port		: fPort,
-				plugin		: fPlugin
+				plugin		: fPlugin,
+				severity	: fSeverity,
+				finding		: fFinding,
+				remark		: fRemark
 			})) { 
 				counter[this[i].status]++; 
 			} 
