84 - getWorkspaces slow with large database 85 - getScans slow with large databases

--- a/jmvc/seccubus/scan/table/views/init.ejs
+++ b/jmvc/seccubus/scan/table/views/init.ejs
@@ -6,7 +6,7 @@
 			<th>Scanner</th>
 			<th>Parameters</th>
 			<th>Hosts</th>
-			<th># Findings</th>
+			<!-- <th># Findings</th> -->
 			<th>Last scan</th>
 			<th>Action</th>
 		</tr>
