--- a/jmvc/seccubus/workspace/table/views/workspace.ejs
+++ b/jmvc/seccubus/workspace/table/views/workspace.ejs
@@ -1,7 +1,7 @@
 <% %>
 <td><%= name %></td>
 <td><%= scanCount %></td>
-<td><%= findCount %></td>
+<!-- <td><%= findCount %></td> -->
 <td><%= lastScan %></td>
 <td>
   <a href='javascript://' class='edit'>Edit</a>
