--- a/jmvc/seccubus/notification/create/views/init.ejs
+++ b/jmvc/seccubus/notification/create/views/init.ejs
@@ -1,9 +1,28 @@
-<h2>New notification</h2>
-<p>
-	<label for='name'>Name</label> <br/>
-	<input type='input' name='name' id='name'/>
-</p>
-<p><label for='description'>Description</label><br/>
-<textarea name='description' id='description'/></textarea>
-</p>
-<p><input type='submit' value='Create'/></p>
+<% %>
+<h2>Create a new notification</h2>
+<table class='noborder'>
+	<tr><td class='noborder'>
+		<label for='subject'>Subject</label> 
+	</td><td class='noborder'>
+		<input type='input' size=78 name='subject' id='newNotSubject'/>
+	</td></tr>
+	<tr><td class='noborder'>
+		<label for='trigger'>Trigger</label> 
+	</td><td class='noborder'>
+		<select name='trigger' id='newNotTrigger'/></select>
+	</td></tr>
+	<tr><td class='noborder'>
+		<label for='recipients'>Recipients</label> 
+	</td><td class='noborder'>
+		<input type='input' size=78 name='recipients' id='newNotRecipients'/>
+	</td></tr>
+	<tr><td class='noborder'>
+		<label for='message'>Message</label> 
+	</td><td class='noborder'>
+		<textarea rows=5 cols=59 name='message' id='newNotMessage'/>
+	</td></tr>
+	<tr><td class='noborder' colspan=2 align='right'>
+		<input type='submit' value='Create Notification'/>
+		<button type='button' class='cancel'>Cancel</button>
+	</td></tr>
+</table>
