--- a/jmvc/seccubus/event/select/views/init.ejs
+++ b/jmvc/seccubus/event/select/views/init.ejs
@@ -5,7 +5,11 @@
 <% } else { %>
 	<!--	<option selected value=-1 disabled=true>Select an event to start</option> -->
 	<% for(var i = 0; i < this.length ; i++) { %>
-		<option <%= this[i] %> value='<%= this[i].id %>'>
+		<option <%= this[i] %> value='<%= this[i].id %>'
+			<% if(i == selected) { %>
+				selected
+			<% } %>
+		>
 			<%== $.View('//seccubus/event/select/views/event.ejs', this[i] )%>
 		</option>
 	<% } %>
