Integrated notifications into scan table and edit scan screen

--- a/jmvc/seccubus/scan/table/views/init.ejs
+++ b/jmvc/seccubus/scan/table/views/init.ejs
@@ -8,6 +8,7 @@
 			<th>Hosts</th>
 			<!-- <th># Findings</th> -->
 			<th>Last scan</th>
+			<th>Notifications</th>
 			<th>Action</th>
 		</tr>
 	</thead>
