--- a/jmvc/seccubus/scan/table/views/scan.ejs
+++ b/jmvc/seccubus/scan/table/views/scan.ejs
@@ -12,6 +12,9 @@
 	<% } %>
 </td>
 <td>
+	<%= notifications %>
+</td>
+<td>
 	<a href='javascript://' class="edit">Edit</a>
 <!--
 	<a href='javascript://' class="destroy">Delete</a>
