--- a/jmvc/seccubus/scan/edit/views/init.ejs
+++ b/jmvc/seccubus/scan/edit/views/init.ejs
@@ -36,5 +36,5 @@
 </table>
 
 <h2>Edit your notifications here</h2>
-<button type='button' id="newNotification">New notification</button>
+<button class='createNotification' type='button' id="newNotification">New notification</button>
 <table id="editScanNotifications"></table>
