Edit and create scan dialog now show default options Fixes: #43 #42 #34 and #9

--- a/jmvc/seccubus/scanner/select/views/init.ejs
+++ b/jmvc/seccubus/scanner/select/views/init.ejs
@@ -14,6 +14,7 @@
 	<option <%= this[i] %> 
 		value='<%= this[i].name %>'
 		help='<%= this[i].help %>'
+		params='<%= this[i].params %>'
 		<% if(this[i].name == selected) { %>
 			selected
 			<% match = true %>
