--- a/jmvc/seccubus/scan/edit/views/init.ejs
+++ b/jmvc/seccubus/scan/edit/views/init.ejs
@@ -22,6 +22,11 @@
 		<input type='input' size=78 name='parameters' id='editScanParam' value='<%= parameters %>'/>
 	</td></tr>
 	<tr><td class='noborder'>
+		<label for='defaults'>defaults</label> 
+	</td><td class='noborder'>
+		<input type='input' size=78 name='defaults' id='defaultParams' value='' readonly=true/>
+	</td></tr>
+	<tr><td class='noborder'>
 		<label for='targets'>Hosts</label> 
 	</td><td class='noborder'>
 		<textarea rows=5 cols=59 name='targets' id='editScanTargets'><%= targets %></textarea>
