--- a/jmvc/seccubus/finding/table/views/init.ejs
+++ b/jmvc/seccubus/finding/table/views/init.ejs
@@ -20,7 +20,6 @@
 		checked		: checked
 	}) %>
 <% } else { %>
-	<% count = 0 %>
 	<% if(typeof noHeader == "undefined" || ! noHeader ) { %>
 		<%== $.View('//seccubus/finding/table/views/header.ejs', {
 			columns		: columns,
@@ -32,31 +31,19 @@
 	<tbody>
 		<% this.sort(fn) %>
 		<%for ( var i = 0; i < this.length ; i++ ){%>
-			<% if(this[i].isMatch({
-				scans		: fScans,
-				status		: fStatus,
-				host		: fHost,
-				hostName	: fHostName,
-				port		: fPort,
-				plugin		: fPlugin,
-				severity	: fSeverity,
-				finding		: fFinding,
-				remark		: fRemark
-			})) { %>
-				<tr <%= this[i] %> class='sev_<%= this[i].severity %>'>
-					<%== $.View('//seccubus/finding/table/views/finding.ejs', 
-						this[i], 
-						{
-							columns : columns,
-							state	: fStatus,
-							checked : checked
-						} 
-					) %>
-				</tr>
-				<% count++ %>
-			<% } %>
+			<tr <%= this[i] %> class='sev_<%= this[i].severity %>'>
+				<%== $.View('//seccubus/finding/table/views/finding.ejs', 
+					this[i], 
+					{
+						columns : columns,
+						state	: fStatus,
+						checked : checked
+					} 
+				) %>
+			</tr>
+			<% count++ %>
 		<% } %>
-		<% if ( count == 0 ) { %>
+		<% if ( this.length == 0 ) { %>
 			<tr><td colspan=<%= columns.length/2 %>>No findings match you selection</td></tr>
 		<% } %>
 	</tbody>
