Fixes #63 - Scan table does not display scanner correctly

--- a/jmvc/seccubus/scan/table/views/scan.ejs
+++ b/jmvc/seccubus/scan/table/views/scan.ejs
@@ -12,7 +12,7 @@
 <%# See the License for the specific language governing permissions and      %>
 <%# limitations under the License.                                           %>
 <td><%= name %></td>
-<td><%= scanner[0] %></td>
+<td><%= scanner %></td>
 <td><%= parameters %></td>
 <td><%= targets %></td>
 <!-- <td><%= findCount %></td> -->
@@ -20,7 +20,7 @@
 	<% if(lastScan == null ) { %>
 		&nbsp;
 	<% } else { %>
-		<%= lastScan[0] %>
+		<%= lastScan %>
 	<% } %>
 </td>
 <td>
