Fixes #59 - Explanation of $ATTACH: in notifications is not very clear

--- a/jmvc/seccubus/notification/edit/views/init.ejs
+++ b/jmvc/seccubus/notification/edit/views/init.ejs
@@ -47,7 +47,8 @@
 				<li>$TARGETS - Targets of the scan (Only in message)
 				<li>$SUMMARY - Summary of findings (Only in message, only after scan)
 				<li>$NEW, $OPEN, $CHANGED, $NOISSUE, $GONE, $CLOSED, $MASKED <br>- Number of findings of that status (Only after scan)
-				<LI>$ATTACH:<ext> - Attach run attachment with that extension to the mail (Only in message, only after scan)
+				<LI>$ATTACH:<ext> - Attach run attachment with that extension to the mail (Only in message, only after scan) E.g. if you specify ivil.xml here, the all files with ext
+				ension ivil.xml that are attacjed to the run, will be sent as attachment in the email.
 			</ul>
 		</td></tr>
 	<tr><td class='noborder' colspan=2 align='right'>
