password field to edit scan window

--- a/jmvc/seccubus/scan/edit/views/init.ejs
+++ b/jmvc/seccubus/scan/edit/views/init.ejs
@@ -29,15 +29,20 @@
 		<input type=input size=78 name='otherScanner' id='editScanOtherScanner' value='<%= scanner %>'/>
 	</td></tr>
 	<tr><td class='noborder'>
-		<label for='parameters'>parameters</label> 
+		<label for='parameters'>Parameters</label> 
 	</td><td class='noborder'>
 		<input type='input' size=78 name='parameters' id='editScanParam' value='<%= parameters %>'/>
 	</td></tr>
 	<tr><td class='noborder'>
-		<label for='defaults'>defaults</label> 
+		<label for='defaults'>Defaults</label> 
 	</td><td class='noborder'>
 		<input type='input' size=78 name='defaults' id='defaultParams' value='' readonly=true/>
 	</td></tr>
+        <tr><td class='noborder'>
+                <label for='password'>Password</label>
+        </td><td class='noborder'>
+                <input type='password' size=78 name='password' id='editScanPassword' value='<%= parameters %>'/>
+        </td></tr>
 	<tr><td class='noborder'>
 		<label for='targets'>Hosts</label> 
 	</td><td class='noborder'>
