name fix for password field

--- a/jmvc/seccubus/scan/create/views/init.ejs
+++ b/jmvc/seccubus/scan/create/views/init.ejs
@@ -36,7 +36,7 @@
         <tr><td class='noborder'>
                 <label for='password'>Password</label>
         </td><td class='noborder'>
-                <input type='password' size=78 name='parameters' id='newScanPassword'/>
+                <input type='password' size=78 name='password' id='newScanPassword'/>
         </td></tr>
 	<tr><td class='noborder'>
 		<label for='targets'>Hosts</label> 
