hide password field except on Nessus, NessusLegacy or OpenVAS

--- a/jmvc/seccubus/scan/create/views/init.ejs
+++ b/jmvc/seccubus/scan/create/views/init.ejs
@@ -33,7 +33,7 @@
 	</td><td class='noborder'>
 		<input type='input' size=78 name='parameters' id='newScanParam'/>
 	</td></tr>
-        <tr><td class='noborder'>
+        <tr id='newScanPasswordRow'><td class='noborder'>
                 <label for='password'>Password</label>
         </td><td class='noborder'>
                 <input type='password' size=78 name='password' id='newScanPassword'/>
