password screen in update scan, small fixes

--- a/jmvc/seccubus/scan/edit/views/init.ejs
+++ b/jmvc/seccubus/scan/edit/views/init.ejs
@@ -38,10 +38,10 @@
 	</td><td class='noborder'>
 		<input type='input' size=78 name='defaults' id='defaultParams' value='' readonly=true/>
 	</td></tr>
-        <tr><td class='noborder'>
+	        <tr id='editScanPasswordRow'><td class='noborder'>
                 <label for='password'>Password</label>
         </td><td class='noborder'>
-                <input type='password' size=78 name='password' id='editScanPassword' value='<%= parameters %>'/>
+                <input type='password' size=78 name='password' id='editScanPassword' value='<%= password %>'/>
         </td></tr>
 	<tr><td class='noborder'>
 		<label for='targets'>Hosts</label> 
