getScans fix to update password

--- a/jmvc/seccubus/scan/edit/views/init.ejs
+++ b/jmvc/seccubus/scan/edit/views/init.ejs
@@ -41,7 +41,7 @@
 	        <tr id='editScanPasswordRow'><td class='noborder'>
                 <label for='password'>Password</label>
         </td><td class='noborder'>
-                <input type='password' size=78 name='password' id='editScanPassword' value='<%= password %>'/>
+                <input type='password' size=78 name='password' id='editScanPassword' value=''/>
         </td></tr>
 	<tr><td class='noborder'>
 		<label for='targets'>Hosts</label> 
