--- a/jmvc/seccubus/scan/edit/views/init.ejs
+++ b/jmvc/seccubus/scan/edit/views/init.ejs
@@ -38,10 +38,15 @@
 	</td><td class='noborder'>
 		<input type='input' size=78 name='defaults' id='defaultParams' value='' readonly=true/>
 	</td></tr>
-	<tr><td class='noborder'>
+	<tr id="editScanTargetsPlace"><td class='noborder'>
 		<label for='targets'>Hosts</label> 
 	</td><td class='noborder'>
 		<textarea rows=5 cols=59 name='targets' id='editScanTargets'><%= targets %></textarea>
+	</td></tr>
+	<tr id="editScanAssetsPlace"><td class='noborder'>
+		<label for='targets'>Assets</label> 
+	</td><td class='noborder'>
+		<select id='editScanTargets'><%= assets %></select>
 	</td></tr>
 	<tr><td class='noborder' colspan=2 align='right'>
 		<input type='submit' value='Update'/>
