--- a/jmvc/seccubus/scan/edit/views/init.ejs
+++ b/jmvc/seccubus/scan/edit/views/init.ejs
@@ -44,9 +44,9 @@
 		<textarea rows=5 cols=59 name='targets' id='editScanTargets'><%= targets %></textarea>
 	</td></tr>
 	<tr id="editScanAssetsPlace"><td class='noborder'>
-		<label for='targets'>Assets</label> 
+		<label for='assets'>Assets</label> 
 	</td><td class='noborder'>
-		<select id='editScanTargets'><%= assets %></select>
+		<select id='editScanAssets' MULTIPLE size="6" style="width:400px;" name='assets' ></select>
 	</td></tr>
 	<tr><td class='noborder' colspan=2 align='right'>
 		<input type='submit' value='Update'/>
