--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -4,6 +4,7 @@ $base-line-height: 24px;
 $sansFamily: "proxima-nova", "arial";
 $sansHeaderFamily: "proxima-nova", "arial";
 $serifFamily: "Georgia";
+$monospaceFamily: "menlo";
 
 $defaultFamily: $sansFamily;
 $headingFamily: $sansHeaderFamily;
