--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -95,3 +95,19 @@ pre {
     padding: 1em;
     overflow:auto;
 }
+.documentation {
+    padding-top:2em;
+    ul{
+        list-style:none;
+        margin:0;
+        padding:0;
+    }
+}
+.faq, .licence {
+    margin-top:2em;
+    padding-top:2em;
+    border-top:1px solid #383838;
+}
+.licence {
+    padding-bottom:2em;
+}
