--- a/jmvc/seccubus/custsql/select/views/init.ejs
+++ b/jmvc/seccubus/custsql/select/views/init.ejs
@@ -11,32 +11,17 @@
 <%# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. %>
 <%# See the License for the specific language governing permissions and      %>
 <%# limitations under the License.                                           %>
-Type your SQL:<BR>
-<textarea rows=10 cols=100 name='hosts' id='custsql_input'><%= sql %></textarea><BR><input type="button" id="custsql_button" value="exec"/> <input type="button" id="custsql_save" value="save SQL"><BR><BR>
-<% if(typeof items == "undefined" && typeof error != "") { %> no sql given 
+<% count = 0  %>
+<% if(typeof this[0] != "undefined" && typeof this[0].error != "undefined" ) { %>
+	 <%== $.View('//seccubus/custsql/select/views/error.ejs',{ message : this[0].error }) %>
 <% } else { %>
-	<% if(error != "") { %>
-		<%== error %>
-	<% } else { %>
-		<table>
-			<thead>
-				<tr>
-				<% for(var num=0;num<head.length;num++){ %>
-				<th><%== head[num] %></th>
-				<% } %>
-				</tr>
-			</thead>
-			<tbody>
-			<% count = 0  %>
-			<% for(var row=0;row<items.length; row++){ %>
-				<tr>
-				<% for ( var col=0; col<head.length; col++ ){ %>
-				<td><%== items[row][head[col]] %></td>
-				<% } %>
-				</tr>
-				<% count++ %>
-			<% } %>
-			</tbody>
-		</table>
+	<%for ( var i = 0; i < this.length ; i++ ){%>
+			<option value='<%= this[i].id %>' >
+				<%== $.View('//seccubus/custsql/select/views/custsql.ejs', this[i] )%>
+			</option>
+		<% count++ %>
+	<% } %>
+	<% if ( count == 0 ) { %>
+		<%== $.View('//seccubus/custsql/select/views/error.ejs',{ message : "No saved sql found"}) %>
 	<% } %>
 <% } %>
