--- a/jmvc/seccubus/custsql/create/views/init.ejs
+++ b/jmvc/seccubus/custsql/create/views/init.ejs
@@ -11,32 +11,15 @@
 <%# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. %>
 <%# See the License for the specific language governing permissions and      %>
 <%# limitations under the License.                                           %>
-Type your SQL:<BR>
-<textarea rows=10 cols=100 name='hosts' id='custsql_input'><%= sql %></textarea><BR><input type="button" id="custsql_button" value="exec"/> <input type="button" id="custsql_save" value="save SQL"><BR><BR>
-<% if(typeof items == "undefined" && typeof error != "") { %> no sql given 
-<% } else { %>
-	<% if(error != "") { %>
-		<%== error %>
-	<% } else { %>
-		<table>
-			<thead>
-				<tr>
-				<% for(var num=0;num<head.length;num++){ %>
-				<th><%== head[num] %></th>
-				<% } %>
-				</tr>
-			</thead>
-			<tbody>
-			<% count = 0  %>
-			<% for(var row=0;row<items.length; row++){ %>
-				<tr>
-				<% for ( var col=0; col<head.length; col++ ){ %>
-				<td><%== items[row][head[col]] %></td>
-				<% } %>
-				</tr>
-				<% count++ %>
-			<% } %>
-			</tbody>
-		</table>
-	<% } %>
-<% } %>
+<h2>Save SQL</h2>
+<table class='noborder'>
+	<tr><td class='noborder'>
+		<label for='name'>Name</label> 
+	</td><td class='noborder'>
+		<input type='input' size=78 name='name' id='newSQLName'/>
+	</td></tr>
+	<tr><td class='noborder' colspan=2 align='right'>
+		<input type='submit' value='Save SQL'/>
+		<button type='button' class='cancel'>Cancel</button>
+	</td></tr>
+</table>
