Update jspm packages and improve sidenav

--- a/frontend/src/components/nav-bar/nav-bar.html
+++ b/frontend/src/components/nav-bar/nav-bar.html
@@ -1,9 +1,9 @@
 <md-toolbar>
 	<div class="md-toolbar-tools">
 		<md-button
-			ng-click="navBar.openNavMenu()"
+			ng-click="navBar.toggleNavMenu()"
 			hide-gt-md
-			aria-label="Open Menu"
+			aria-label="Toggle Menu"
 			class="nav-menu-button">
 			<md-icon md-svg-icon="navigation:menu"></md-icon>
 		</md-button>
