Added title tot he app

--- a/frontend/src/app.less
+++ b/frontend/src/app.less
@@ -1,5 +1,14 @@
 .page-title {
-    padding-left: 64px;
-    background: url('/images/logo.png') 15px center no-repeat;
+    font-size: 36px;
+    margin: 0;
+    padding: 12px 64px;
+    background: url('images/logo.png') 15px center no-repeat;
     background-size: 36px 36px;
+
+    span {
+        display: block;
+        font-size: 16px;
+        font-weight: normal;
+        margin: 0;
+    }
 }
