Got the app working with generators

--- a/frontend/src/seccubus.less
+++ b/frontend/src/seccubus.less
@@ -1,3 +1,7 @@
+
+@import "./components/status-page/status-page";
+/* MARKER: insert component less files here */
+
 .page-title {
     font-size: 36px;
     margin: 0;
