Fix menu to point to correct routes

--- a/frontend/src/components/nav-menu/nav-menu.html
+++ b/frontend/src/components/nav-menu/nav-menu.html
@@ -3,12 +3,12 @@
 	md-is-locked-open="$mdMedia('gt-md')"
 	class="md-sidenav-left"
 	layout="column">
-	<md-button ui-sref="seccubus.status">Status</md-button>
-	<md-button ui-sref="seccubus.runs">Runs</md-button></md-button>
-	<md-button ui-sref="seccubus.findings">Findings</md-button>
-	<md-button ui-sref="seccubus.sql">Custom SQL</md-button>
+	<md-button ui-sref="seccubus.statusPage">Status</md-button>
+	<md-button ui-sref="seccubus.runsPage">Runs</md-button></md-button>
+	<md-button ui-sref="seccubus.findingsPage">Findings</md-button>
+	<md-button ui-sref="seccubus.sqlPage">Custom SQL</md-button>
 	<md-divider></md-divider>
-	<md-button ui-sref="seccubus.workspaces">Manage Workspaces</md-button>
-	<md-button ui-sref="seccubus.scans">Manage Scans</md-button>
-	<md-button ui-sref="seccubus.assets">Manage Assets</md-button>
+	<md-button ui-sref="seccubus.workspacesPage">Manage Workspaces</md-button>
+	<md-button ui-sref="seccubus.scansPage">Manage Scans</md-button>
+	<md-button ui-sref="seccubus.assetsPage">Manage Assets</md-button>
 </md-sidenav>
