Added some theming configuration

--- a/frontend/src/components/status-page/status-page.html
+++ b/frontend/src/components/status-page/status-page.html
@@ -2,7 +2,7 @@
 	{{statusPage.statusStore.upToDate}}
 
 	<md-card>
-		<md-toolbar class="md-hue-1">
+		<md-toolbar class="md-accent">
 			<h2 class="md-toolbar-tools">
 				<span>Config Test</span>
 			</h2>
