--- a/frontend/src/seccubus.less
+++ b/frontend/src/seccubus.less
@@ -1,3 +1,4 @@
+@import './components/nav-bar/nav-bar';
 @import "./components/status-page/status-page";
 @import "./components/runs-page/runs-page";
 /* MARKER: insert component less files here */
