--- a/frontend/src/components/status-page/status-page.less
+++ b/frontend/src/components/status-page/status-page.less
@@ -1,3 +1,18 @@
 status-page {
+	md-card {
+		margin-bottom: 16px;
 
+		.md-tile-left md-icon {
+			width: 40px;
+			height: 40px;
+
+			&.success {
+				color: #388E3C;
+			}
+
+			&.error {
+				color: #C62828;
+			}
+		}
+	}
 }
