more work on frontend

--- a/frontend/src/components/nav-bar/nav-bar.html
+++ b/frontend/src/components/nav-bar/nav-bar.html
@@ -4,7 +4,7 @@
 			ng-click="navBar.toggleNavMenu()"
 			hide-gt-md
 			aria-label="Toggle Menu"
-			class="nav-menu-button">
+			class="md-icon-button nav-menu-button">
 			<md-icon md-svg-icon="navigation:menu"></md-icon>
 		</md-button>
 
