--- a/frontend/src/components/nav-bar/nav-bar.less
+++ b/frontend/src/components/nav-bar/nav-bar.less
@@ -1,17 +1,20 @@
 nav-bar {
 	.nav-menu-button {
 		margin-right: 16px;
-	}
-
-	md-select.md-default-theme {
-		margin-top: 0;
-
-		.md-select-label,
-		&:not([disabled]):focus .md-select-label {
-			color: rgba(255,255,255,0.87);
-			&.md-placeholder {
-				color: rgba(255,255,255,0.87);
-			}
+		md-icon {
+			color: white;
 		}
 	}
+
+	// md-select.md-default-theme {
+	// 	margin-top: 0;
+	//
+	// 	.md-select-label,
+	// 	&:not([disabled]):focus .md-select-label {
+	// 		color: rgba(255,255,255,0.87);
+	// 		&.md-placeholder {
+	// 			color: rgba(255,255,255,0.87);
+	// 		}
+	// 	}
+	// }
 }
