--- a/frontend/src/components/status-page/status-page.less
+++ b/frontend/src/components/status-page/status-page.less
@@ -2,10 +2,7 @@ status-page {
 	md-card {
 		margin-bottom: 16px;
 
-		.md-tile-left md-icon {
-			width: 40px;
-			height: 40px;
-
+		md-icon {
 			&.success {
 				color: #388E3C;
 			}
