--- a/frontend/src/seccubus.less
+++ b/frontend/src/seccubus.less
@@ -1,9 +1,12 @@
+@import './components/table/table';
+
 @import './components/nav-bar/nav-bar';
 @import './components/nav-menu/nav-menu';
 @import './components/status-page/status-page';
 @import './components/runs-page/runs-page';
 @import './components/workspaces-page/workspaces-page';
 /* MARKER: insert component less files here */
+
 .page-title {
     font-size: 36px;
     margin: 0;
@@ -17,207 +20,8 @@
         margin: 0;
     }
 }
-// Variables
-// ---------------------
-@table-header-font-weight: 400;
-@table-header-font-color: #757575;
-@table-cell-padding: 1.6rem;
-@table-condensed-cell-padding: @table-cell-padding/2;
-@table-bg: #fff;
-@table-bg-accent: #f5f5f5;
-@table-bg-hover: rgba(0,0,0,.12);
-@table-bg-active: @table-bg-hover;
-@table-border-color: #e0e0e0;
-.transition(@transition) {
-    -webkit-transition: @transition;
-    -o-transition: @transition;
-    transition: @transition;
-}
-md-whiteframe.md-table {
-    margin: 16px;
-    > table.table {
-        margin-bottom: 0;
-    }
-    @media screen and (max-width: 768px) {
-        &.md-whiteframe-z1 {
-            box-shadow: none;
-        }
-    }
-}
-// Baseline styles
-.table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
-    max-width: 100%;
-    margin-bottom: 2rem;
-    background-color: @table-bg;
-    > thead,
-    > tbody,
-    > tfoot {
-        > tr {
-            .transition(all .3s ease);
-            > th,
-            > td {
-                text-align: left;
-                padding: @table-cell-padding;
-                vertical-align: top;
-                border-top: 0;
-                .transition(all .3s ease);
-            }
-        }
-    }
-    > thead > tr > th {
-        font-weight: @table-header-font-weight;
-        color: @table-header-font-color;
-        vertical-align: bottom;
-        border-bottom: 1px solid rgba(0,0,0,.12);
-    }
-    > caption + thead,
-    > colgroup + thead,
-    > thead:first-child {
-        > tr:first-child {
-            > th,
-            > td {
-                border-top: 0;
-            }
-        }
-    }
-    > tbody + tbody {
-        border-top: 1px solid rgba(0,0,0,.12);
-    }
-    // Nesting
-    .table {
-        background-color: @table-bg;
-    }
-    // Remove border
-    .no-border {
-        border: 0;
-    }
-}
-// Condensed table w/ half padding
-.table-condensed {
-    > thead,
-    > tbody,
-    > tfoot {
-        > tr {
-            > th,
-            > td {
-                padding: @table-condensed-cell-padding;
-            }
-        }
-    }
-}
-// Bordered version
-//
-// Add horizontal borders between columns.
-.table-bordered {
-    border: 0;
-    > thead,
-    > tbody,
-    > tfoot {
-        > tr {
-            > th,
-            > td {
-                border: 0;
-                border-bottom: 1px solid @table-border-color;
-            }
-        }
-    }
-    > thead > tr {
-        > th,
-        > td {
-            border-bottom-width: 2px;
-        }
-    }
-}
-// Hover effect
-//
-.table-hover {
-    > tbody > tr:hover {
-        > td,
-        > th {
-            background-color: @table-bg-hover;
-            cursor: pointer;
-        }
-    }
-}
-// Responsive tables (vertical)
-//
-// Wrap your tables in `.table-responsive-vertical` and we'll make them mobile friendly
-// by vertical table-cell display. Only applies <768px. Everything above that will display normally.
-// For correct display you must add 'data-title' to each 'td'
-.table-responsive-vertical {
-    @media screen and (max-width: 768px) {
-        // Tighten up spacing
-        > .table {
-            margin-bottom: 0;
-            background-color: transparent;
-            > thead,
-            > tfoot {
-                display: none;
-            }
-            > tbody {
-                display: block;
-                > tr {
-                    display: block;
-                    border: 1px solid @table-border-color;
-                    border-radius: 2px;
-                    margin-bottom: @table-cell-padding;
-                    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-                    > td {
-                        background-color: @table-bg;
-                        display: block;
-                        vertical-align: middle;
-                        text-align: right;
-                    }
-                    > td[data-title]:before {
-                        content: attr(data-title);
-                        float: left;
-                        font-size: inherit;
-                        font-weight: @table-header-font-weight;
-                        color: @table-header-font-color;
-                    }
-                }
-            }
-        }
-        // Special overrides for the bordered tables
-        > .table-bordered {
-            border: 0;
-            // Nuke the appropriate borders so that the parent can handle them
-            > tbody {
-                > tr {
-                    > td {
-                        border: 0;
-                        border-bottom: 1px solid @table-border-color;
-                    }
-                    > td:last-child {
-                        border-bottom: 0;
-                    }
-                }
-            }
-        }
-        // Special overrides for the striped tables
-        > .table-striped {
-            > tbody > tr > td,
-            > tbody > tr:nth-child(odd) {
-                background-color: @table-bg;
-            }
-            > tbody > tr > td:nth-child(odd) {
-                background-color: @table-bg-accent;
-            }
-        }
-        // Special overrides for hover tables
-        > .table-hover {
-            > tbody {
-                > tr:hover > td,
-                > tr:hover {
-                    background-color: @table-bg;
-                }
-                > tr > td:hover {
-                    background-color: @table-bg-hover;
-                }
-            }
-        }
-    }
+
+.page-host {
+    position: relative;
+    overflow: hidden;
 }
