--- a/frontend/src/components/nav-bar/nav-bar.html
+++ b/frontend/src/components/nav-bar/nav-bar.html
@@ -1,21 +1,26 @@
-<md-toolbar>
-	<div class="md-toolbar-tools">
-		<md-button
-			ng-click="navBar.toggleNavMenu()"
-			hide-gt-md
-			aria-label="Toggle Menu"
-			class="md-icon-button nav-menu-button">
-			<md-icon md-svg-icon="navigation:menu"></md-icon>
-		</md-button>
+<md-toolbar class="md-whiteframe-z2">
+  <div class="md-toolbar-tools">
+    <md-button
+      ng-click="navBar.toggleNavMenu()"
+      hide-gt-md
+      aria-label="Toggle Menu"
+      class="md-icon-button nav-menu-button">
+      <md-icon md-svg-icon="navigation:menu"></md-icon>
+    </md-button>
 
-		<h3 flex><span>{{navBar.currentPage}}</span></h3>
+    <h1 flex>Seccubus</h1>
 
-		<md-select ng-model="navBar.selectedWorkspace">
-			<md-select-label>{{navBar.selectedWorkspace.name || 'Select a workspace...'}}</md-select-label>
-			<md-option
-				ng-repeat="workspace in navBar.workspaceStore.items track by workspace.id"
-				ng-value="workspace"
-			>{{workspace.name}}</md-option>
-		</md-select>
-	</div>
+    <md-select ng-model="navBar.selectedWorkspace">
+      <md-select-label>{{navBar.selectedWorkspace.name || 'Select a workspace...'}}</md-select-label>
+      <md-option
+        ng-repeat="workspace in navBar.workspaceStore.items track by workspace.id"
+        ng-value="workspace"
+      >{{workspace.name}}</md-option>
+    </md-select>
+  </div>
 </md-toolbar>
+
+<!--
+<md-button ui-sref="seccubus.workspacesPage">Manage Workspaces</md-button>
+<md-button ui-sref="seccubus.scansPage">Manage Scans</md-button>
+<md-button ui-sref="seccubus.assetsPage">Manage Assets</md-button> -->
